--- a/index.html
+++ b/index.html
@@ -11,83 +11,83 @@
   <link href="https://fonts.googleapis.com/css2?family=Coiny&family=Sono:wght@400;600&display=swap" rel="stylesheet" />
 
   <link href="style.css" rel="stylesheet" />
-  <title>Today I Learned!</title>
+  <title>Faktabloggen</title>
 </head>
 
 <body>
   <div class="container">
     <header class="header">
       <div class="logo">
-        <img src="logo.png" height="68" width="68" alt="Today I Learned Logo" />
-        <h1>Today I Learned</h1>
+        <img src="logo.png" height="68" width="68" alt="Faktabloggen Logo" />
+        <h1>Faktabloggen</h1>
       </div>
 
-      <button class="btn btn-large btn-open">Share a fact</button>
+      <button class="btn btn-large btn-open">Dela fakta</button>
     </header>
 
     <form class="fact-form hidden">
-      <input type="text" placeholder="Share a fact with the world..." />
+      <input type="text" placeholder="Dela intressanta fakta..." />
       <span>200</span>
-      <input type="text" placeholder="Trustworthy source..." />
+      <input type="text" placeholder="Trovärdig källa..." />
       <select>
-        <option value="">Choose category:</option>
-        <option value="technology">Technology</option>
-        <option value="science">Science</option>
-        <option value="society">Society</option>
-        <option value="entertainment">Entertainment</option>
-        <option value="health">Health</option>
-        <option value="history">History</option>
-        <option value="finance">Finance</option>
-        <option value="news">News</option>
+        <option value="">Välj kategori:</option>
+        <option value="technology">Teknik</option>
+        <option value="science">Vetenskap</option>
+        <option value="society">Samhälle</option>
+        <option value="entertainment">Nöje</option>
+        <option value="health">Hälsa</option>
+        <option value="history">Historia</option>
+        <option value="finance">Finans</option>
+        <option value="news">Nyheter</option>
 
       </select>
-      <button class="btn btn-large">Post</button>
+      <button class="btn btn-large">Lägg upp</button>
     </form>
 
     <main class="main">
       <aside>
         <ul>
           <li class="category">
-            <button class="btn btn-all-categories">All</button>
+            <button class="btn btn-all-categories">Alla kategorier</button>
           </li>
           <li class="category">
             <button class="btn btn-category" style="background-color: #3b82f6">
-              Technology
+              Teknik
             </button>
           </li>
           <li class="category">
             <button class="btn btn-category" style="background-color: #16a34a">
-              Science
+              Vetenskap
             </button>
           </li>
           <li class="category">
             <button class="btn btn-category" style="background-color: #eab308">
-              Society
+              Samhälle
             </button>
           </li>
           <li class="category">
             <button class="btn btn-category" style="background-color: #db2777">
-              Entertainment
+              Nöje
             </button>
           </li>
           <li class="category">
             <button class="btn btn-category" style="background-color: #14b8a6">
-              Health
+              Hälsa
             </button>
           </li>
           <li class="category">
             <button class="btn btn-category" style="background-color: #f97316">
-              History
+              Historia
             </button>
           </li>
           <li class="category">
             <button class="btn btn-category" style="background-color: #ef4444">
-              Finance
+              Finans
             </button>
           </li>
           <li class="category">
             <button class="btn btn-category" style="background-color: #8b5cf6">
-              News
+              Nyheter
             </button>
           </li>
         </ul>
